fix: messages inconsistencies (#4174)
* fix: messages inconsistencies

* fix

* chore: message at the page

* fix: permission grid styling broken

* fix

--- a/extensions/messages/less/forum.less
+++ b/extensions/messages/less/forum.less
@@ -232,6 +232,17 @@
   gap: 6px;
 }
 
+.DialogSection-header-info-title {
+  display: flex;
+  flex-direction: column;
+}
+
+.DialogSection-header-info-helperText {
+  font-size: 0.8rem;
+  font-weight: normal;
+  color: var(--control-color);
+}
+
 .DialogSection-back {
   display: flex;
 
